develop: code clean And pendig requests
